--- a/lazyLoad/demo.html
+++ b/lazyLoad/demo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Lazyload</title>
   <style>
-    .image-item {
+    img {
       display: block;
       margin-bottom: 50px;
       height: 200px;
@@ -14,18 +14,18 @@
 </head>
 
 <body>
-  <img src="./img/default.png" class="image-item" data-original="./img/1.jpg" />
-  <img src="./img/default.png" class="image-item" data-original="./img/2.jpg" />
-  <img src="./img/default.png" class="image-item" data-original="./img/3.jpg" />
-  <img src="./img/default.png" class="image-item" data-original="./img/4.jpg" />
-  <img src="./img/default.png" class="image-item" data-original="./img/5.jpg" />
-  <img src="./img/default.png" class="image-item" data-original="./img/6.jpg" />
-  <img src="./img/default.png" class="image-item" data-original="./img/7.jpg" />
-  <img src="./img/default.png" class="image-item" data-original="./img/8.jpg" />
-  <img src="./img/default.png" class="image-item" data-original="./img/9.jpg" />
-  <img src="./img/default.png" class="image-item" data-original="./img/10.jpg" />
+  <img src="./img/default.png" data-src="./img/1.jpg" />
+  <img src="./img/default.png" data-src="./img/2.jpg" />
+  <img src="./img/default.png" data-src="./img/3.jpg" />
+  <img src="./img/default.png" data-src="./img/4.jpg" />
+  <img src="./img/default.png" data-src="./img/5.jpg" />
+  <img src="./img/default.png" data-src="./img/6.jpg" />
+  <img src="./img/default.png" data-src="./img/7.jpg" />
+  <img src="./img/default.png" data-src="./img/8.jpg" />
+  <img src="./img/default.png" data-src="./img/9.jpg" />
+  <img src="./img/default.png" data-src="./img/10.jpg" />
   <script>
-    const images = document.querySelectorAll('img[data-original]')
+    const imgs = document.querySelectorAll('img[data-src]')
     const config = {
       rootMargin: '0px',
       threshold: 0
@@ -33,8 +33,10 @@
     let observer = new IntersectionObserver((entries, self) => {
         entries.forEach(entry => {
           if (entry.isIntersecting) {
-            // 加载图像
-            preloadImage(entry.target);
+            let img = entry.target
+            let src = img.dataset.src
+            img.src = src;
+            img.removeAttribute("data-src")
             // 解除观察
             self.unobserve(entry.target)
           }
@@ -42,18 +44,9 @@
       },
       config)
 
-    images.forEach(image => {
+    imgs.forEach(image => {
       observer.observe(image);
     });
-
-    function preloadImage(img) {
-      const src = img.dataset.original
-      if (!src) {
-        return;
-      }
-      img.src = src;
-      img.removeAttribute("data-original")
-    }
   </script>
 </body>
 
