--- a/css-demo/imagehover/index.html
+++ b/css-demo/imagehover/index.html
@@ -13,7 +13,7 @@
 </body>
 <div>
   <figure class="imghvr-push-up">
-    <img src="./img/1.jpg" alt="example-image">
+    <img src="../img/1.jpg" alt="example-image">
     <figcaption>
       <h3>Hello World</h3>
       <p>Life is too important!</p>
@@ -21,7 +21,7 @@
   </figure>
 
   <figure class="imghvr-push-down">
-    <img src="./img/1.jpg" alt="example-image">
+    <img src="../img/1.jpg" alt="example-image">
     <figcaption>
       <h3>Hello World</h3>
       <p>Life is too important!</p>
@@ -29,7 +29,7 @@
   </figure>
 
   <figure class="imghvr-push-left">
-    <img src="./img/1.jpg" alt="example-image">
+    <img src="../img/1.jpg" alt="example-image">
     <figcaption>
       <h3>Hello World</h3>
       <p>Life is too important!</p>
@@ -37,7 +37,7 @@
   </figure>
 
   <figure class="imghvr-push-right">
-    <img src="./img/1.jpg" alt="example-image">
+    <img src="../img/1.jpg" alt="example-image">
     <figcaption>
       <h3>Hello World</h3>
       <p>Life is too important!</p>
@@ -45,7 +45,7 @@
   </figure>
 
   <figure class="imghvr-slide-up">
-    <img src="./img/1.jpg" alt="example-image">
+    <img src="../img/1.jpg" alt="example-image">
     <figcaption>
       <h3>Hello World</h3>
       <p>Life is too important!</p>
@@ -53,7 +53,7 @@
   </figure>
 
   <figure class="imghvr-slide-down">
-    <img src="./img/1.jpg" alt="example-image">
+    <img src="../img/1.jpg" alt="example-image">
     <figcaption>
       <h3>Hello World</h3>
       <p>Life is too important!</p>
@@ -61,7 +61,7 @@
   </figure>
 
   <figure class="imghvr-slide-left">
-    <img src="./img/1.jpg" alt="example-image">
+    <img src="../img/1.jpg" alt="example-image">
     <figcaption>
       <h3>Hello World</h3>
       <p>Life is too important!</p>
@@ -69,7 +69,7 @@
   </figure>
 
   <figure class="imghvr-slide-right">
-    <img src="./img/1.jpg" alt="example-image">
+    <img src="../img/1.jpg" alt="example-image">
     <figcaption>
       <h3>Hello World</h3>
       <p>Life is too important!</p>
